# robopro_RC10_urdf

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  run.sh
RC10/: .dockerignore  CMakeLists.txt  package.xml
RC10/config/: config.rviz
RC10/launch/: display.launch  display.launch.py  gazebo.launch  gazebo.launch.py  headless.launch.py
RC10/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
RC10/resource/: RC10
RC10/urdf/: RC10.csv  RC10.urdf
