<package format="2">
  <name>RC10</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for RC10</p>
    <p>This package contains configuration data, 3D models and launch files
for RC10 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>

  <!-- ROS 2 Humble build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>tf2_ros</depend>
  <depend>gazebo_ros</depend>
  <export>
    <architecture_independent />
  </export>
</package>